# University_Projects

./: .README.md.swp  .gitignore  README.md
AC_ProgramacionOrientadaAlRendimiento/: .clang-tidy  CMakeLists.txt  readme.md  readme.txt
AC_ProgramacionOrientadaAlRendimiento/bash_scripts/: compila.sh  ejecuta.sh  en_claro_salidas.sh  info.md  pruebas_rendimiento.sh
AC_ProgramacionOrientadaAlRendimiento/fluid/: CMakeLists.txt  fluid.cpp
AC_ProgramacionOrientadaAlRendimiento/ftest/: CMakeLists.txt  ftest.cpp  functional.sh  main.cpp
AC_ProgramacionOrientadaAlRendimiento/sim/: Bloques.hpp  CMakeLists.txt  calculadora.cpp  calculadora.hpp  malla.cpp  malla.hpp  particle.hpp  progargs.cpp  progargs.hpp  simulacion.cpp  simulacion.hpp  vector_3d.hpp
AC_ProgramacionOrientadaAlRendimiento/utest/: CMakeLists.txt  calculadora_test.cpp  etapas_simulacion_test.cpp  main.cpp  malla_test.cpp  progargs_test.cpp  tools_trazas.cpp  tools_trazas.hpp  vector3d_test.cpp
ArquitecturaDatos/: .gitignore  README.md
Crytography-practica1/: R81_17_E1_grupo.txt  R81_17_E1_run.txt  readme.md  requirements.txt
EECC-p1/: README.md  autores.txt  ejercicio1.s  ejercicio2.s  ejercicio3.s  ejercicio4.txt
EECC-p2/: README.md  authors.txt  e1_checkpoint.txt  e2_checkpoint.txt
FFBBDD_p1/: NEWcreations.sql  NEWload.sql  README.md
FFBBDD_p2/: Consulta1  README.md  codigo.txt  consultas  consultas_final.txt  disparador.txt  disparadores24man.txt  paquete  paquete.txt  pruebas_trigger3.txt  trigger3.txt  triggers.txt  vista.txt
FFBBDD_p3/: README.md  consulta1.txt  script_statistics_2023_def.sql
FinalProject-FirstYear/: README.md  bloque.py  constantes.py  enemigo.py  exec_instructions.md  interfaz.py  main.py  mario.py  mario_assets.pyxres  objetos.py  tablero.py
IA-belman/: README.md  json_generator.json.py  test.py
IAO-pr-cticas/: README.md
Interfaces-caso_practico/: readme.md
PL-practicaFinal/: .gitignore  README.md
SSIIUU-final/: .gitignore  README.md  index.js
Sistemas Operativos/: readme.md
(+364 files in other folders)
